--- a/index.html
+++ b/index.html
@@ -8,9 +8,26 @@
 	<title>Document</title>
 </head>
 <body>
+	<div>
 	<div class="box"></div>
 	<div class="box2"></div>
 	<div class="box3"></div>
+	</div>
+	<br>
+	<br>
+	<div>
 	<div class="box4"></div>
+	<div class="box5"></div>
+	<div class="box6"></div>
+	<div class="box7"></div>
+	<div class="box8"></div>
+	<div class="box9"></div>
+	<div class="box10"></div>
+	<div class="box11"></div>
+	<div class="box12"></div>
+	<div class="box13">
+	<img class="face" src="images/smiley.jpg" style="border-radius: 50%"></img>
+	</div>
+	</div>
 </body>
 </html>
